syntax = "proto3";
import "google/protobuf/any.proto";
package LPS.Server.Rpc.InnerMessages;

enum HostCommandType {
    SyncServers = 0;
    SyncGates = 1;
    Open = 2;
    Stop = 3;
    SyncServiceManager = 4;
    ReconnectServer = 5;
    ReconnectGate = 6;
}

message HostCommand {
    HostCommandType Type = 1;
    repeated google.protobuf.Any Args = 2;
}
